doing stat gallery section now

--- a/index.html
+++ b/index.html
@@ -26,14 +26,40 @@
           extend: {
             colors: {
               clifford: "#000",
-              "dark-primary": "#1C1C1C",
-              "our-red": "#F00",
-              "our-orange": "#FF8938",
+              "our-primary": "#FF4240",
+              "our-black": "#131318",
             },
           },
         },
       };
     </script>
   </head>
-  <body></body>
+  <body class="font-manrope">
+    <header></header>
+    <main>
+      <!-- Professional Hockey Clubs Stats Start -->
+      <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+        <!-- Section Title Start-->
+        <div
+          class="text-center px-1 py-6 lg:py-8 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
+        >
+          <h1 class="text-our-black text-2xl lg:text-4xl font-extrabold mb-6">
+            Professional Hockeys Club
+          </h1>
+          <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Section Title End-->
+        <!-- Hockey Club Stats Gallery Start -->
+        <!-- Hockey Club Stats Gallery End -->
+      </section>
+      <!-- Professional Hockey Clubs Stats End -->
+    </main>
+
+    <footer></footer>
+
+    <!-- <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div> -->
+  </body>
 </html>
