--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
         <!-- Section Title Start-->
         <div
-          class="text-center px-1 py-6 lg:py-8 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
+          class="text-center px-1 py-6 lg:py-8 mt-10 lg:mt-24 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
         >
           <h1 class="text-our-black text-2xl lg:text-4xl font-extrabold mb-6">
             Professional Hockeys Club
@@ -53,6 +53,85 @@
         </div>
         <!-- Section Title End-->
         <!-- Hockey Club Stats Gallery Start -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-0"
+        >
+          <!-- Item 1 -->
+          <div class="flex flex-col items-center text-center px-4">
+            <div class="">
+              <div
+                class="radial-progress text-our-primary"
+                style="--value: 87; --size: 9rem"
+                role="progressbar"
+              >
+                <span class="text-our-black font-extrabold text-3xl m-4"
+                  >87%</span
+                >
+              </div>
+            </div>
+            <h3 class="text-our-black text-xl font-extrabold mt-6 mb-4">
+              Prayer Facility
+            </h3>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="flex flex-col items-center text-center px-4">
+            <div class="">
+              <div
+                class="radial-progress text-[#49D293]"
+                style="--value: 95; --size: 9rem"
+                role="progressbar"
+              >
+                <span class="text-our-black font-extrabold text-3xl m-4"
+                  >95%</span
+                >
+              </div>
+            </div>
+            <h3 class="text-our-black text-xl font-extrabold mt-6 mb-4">
+              Experienced Coach
+            </h3>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="flex flex-col items-center text-center px-4">
+            <div class="">
+              <div
+                class="radial-progress text-[#FFB546]"
+                style="--value: 90; --size: 9rem"
+                role="progressbar"
+              >
+                <span class="text-our-black font-extrabold text-3xl m-4"
+                  >90%</span
+                >
+              </div>
+            </div>
+            <h3 class="text-our-black text-xl font-extrabold mt-6 mb-4">
+              Senior Player
+            </h3>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="flex flex-col items-center text-center px-4">
+            <div class="">
+              <div
+                class="radial-progress text-[#4C8DF1]"
+                style="--value: 80; --size: 9rem"
+                role="progressbar"
+              >
+                <span class="text-our-black font-extrabold text-3xl m-4"
+                  >80%</span
+                >
+              </div>
+            </div>
+            <h3 class="text-our-black text-xl font-extrabold mt-6 mb-4">
+              Training Ground
+            </h3>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
         <!-- Hockey Club Stats Gallery End -->
       </section>
       <!-- Professional Hockey Clubs Stats End -->
