stat section rework done fully

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             <h3 class="text-our-black text-xl font-extrabold mt-6 mb-4">
               Prayer Facility
             </h3>
-            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p class="text-[#13131899] font-medium">
+              Amet consectetur. Condimentum dignissim adipiscing .
+            </p>
           </div>
 
           <!-- Item 2 -->
@@ -91,7 +93,9 @@
             <h3 class="text-our-black text-xl font-extrabold mt-6 mb-4">
               Experienced Coach
             </h3>
-            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p class="text-[#13131899] font-medium">
+              Amet consectetur. Condimentum dignissim adipiscing .
+            </p>
           </div>
 
           <!-- Item 3 -->
@@ -110,7 +114,9 @@
             <h3 class="text-our-black text-xl font-extrabold mt-6 mb-4">
               Senior Player
             </h3>
-            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p class="text-[#13131899] font-medium">
+              Amet consectetur. Condimentum dignissim adipiscing .
+            </p>
           </div>
 
           <!-- Item 4 -->
@@ -129,12 +135,16 @@
             <h3 class="text-our-black text-xl font-extrabold mt-6 mb-4">
               Training Ground
             </h3>
-            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p class="text-[#13131899] font-medium">
+              Amet consectetur. Condimentum dignissim adipiscing .
+            </p>
           </div>
         </div>
         <!-- Hockey Club Stats Gallery End -->
       </section>
       <!-- Professional Hockey Clubs Stats End -->
+
+      <!-- New Products Section -->
     </main>
 
     <footer></footer>
