--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>B9-A3</title>
+    <!-- Font Awesome CND -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -144,7 +152,82 @@
       </section>
       <!-- Professional Hockey Clubs Stats End -->
 
-      <!-- New Products Section -->
+      <!-- New Products Section Start -->
+      <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+        <!-- Section Title Start-->
+        <div
+          class="text-center px-1 py-6 lg:py-8 mt-10 lg:mt-24 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
+        >
+          <h1 class="text-our-black text-2xl lg:text-4xl font-extrabold mb-6">
+            Our New Products
+          </h1>
+          <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Section Title End-->
+        <!-- Product Gallery Start -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+            <div
+              class="flex flex-col lg:flex-row gap-5 items-center content-stretch"
+            >
+              <!-- left -->
+              <div>
+                <img src="Images/5.png" alt="" />
+              </div>
+              <!-- right -->
+              <div class="space-y-2">
+                <!-- top -->
+                <div class="flex gap-4">
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
+                    <p class="text-[#1313187f] font-medium">5.0</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">20</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">200</p>
+                  </div>
+                </div>
+                <!-- middle -->
+                <h3 class="text-our-black text-xl font-extrabold">
+                  World Cup Flags Football
+                </h3>
+                <p class="text-[#13131899] font-medium">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                </p>
+                <!-- bot -->
+                <div class="flex gap-5">
+                  <h4 class="font-extrabold text-our-primary text-lg">
+                    Price - $22.00
+                  </h4>
+                  <div class="flex items-center gap-2">
+                    <i
+                      class="fa-solid fa-cart-shopping text-xl text-[#1313187f]"
+                    ></i>
+                    <p class="text-[#1313187f] font-medium">
+                      Delivery Fee : Free
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>2</div>
+        </div>
+        <!-- Product Gallery End -->
+      </section>
+      <!-- New Products Section End -->
     </main>
 
     <footer></footer>
