--- a/index.html
+++ b/index.html
@@ -169,16 +169,19 @@
         <!-- Section Title End-->
         <!-- Product Gallery Start -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <!-- Each Product -->
           <div class="p-6 rounded-2xl border-2 border-[#13131819]">
             <div
-              class="flex flex-col lg:flex-row gap-5 items-center content-stretch"
+              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
             >
               <!-- left -->
-              <div>
-                <img src="Images/5.png" alt="" />
+              <div
+                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+              >
+                <img class="w-full mx-auto" src="Images/5.png" alt="" />
               </div>
               <!-- right -->
-              <div class="space-y-2">
+              <div class="space-y-2 flex-1">
                 <!-- top -->
                 <div class="flex gap-4">
                   <!-- each stat -->
@@ -223,7 +226,291 @@
               </div>
             </div>
           </div>
-          <div>2</div>
+          <!-- Each Product -->
+          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+            <div
+              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
+            >
+              <!-- left -->
+              <div
+                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+              >
+                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+              </div>
+              <!-- right -->
+              <div class="space-y-2 flex-1">
+                <!-- top -->
+                <div class="flex gap-4">
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
+                    <p class="text-[#1313187f] font-medium">5.0</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">20</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">200</p>
+                  </div>
+                </div>
+                <!-- middle -->
+                <h3 class="text-our-black text-xl font-extrabold">
+                  World Cup Flags Football
+                </h3>
+                <p class="text-[#13131899] font-medium">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                </p>
+                <!-- bot -->
+                <div class="flex gap-5">
+                  <h4 class="font-extrabold text-our-primary text-lg">
+                    Price - $22.00
+                  </h4>
+                  <div class="flex items-center gap-2">
+                    <i
+                      class="fa-solid fa-cart-shopping text-xl text-[#1313187f]"
+                    ></i>
+                    <p class="text-[#1313187f] font-medium">
+                      Delivery Fee : Free
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Each Product -->
+          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+            <div
+              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
+            >
+              <!-- left -->
+              <div
+                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+              >
+                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+              </div>
+              <!-- right -->
+              <div class="space-y-2 flex-1">
+                <!-- top -->
+                <div class="flex gap-4">
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
+                    <p class="text-[#1313187f] font-medium">5.0</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">20</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">200</p>
+                  </div>
+                </div>
+                <!-- middle -->
+                <h3 class="text-our-black text-xl font-extrabold">
+                  World Cup Flags Football
+                </h3>
+                <p class="text-[#13131899] font-medium">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                </p>
+                <!-- bot -->
+                <div class="flex gap-5">
+                  <h4 class="font-extrabold text-our-primary text-lg">
+                    Price - $22.00
+                  </h4>
+                  <div class="flex items-center gap-2">
+                    <i
+                      class="fa-solid fa-cart-shopping text-xl text-[#1313187f]"
+                    ></i>
+                    <p class="text-[#1313187f] font-medium">
+                      Delivery Fee : Free
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Each Product -->
+          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+            <div
+              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
+            >
+              <!-- left -->
+              <div
+                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+              >
+                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+              </div>
+              <!-- right -->
+              <div class="space-y-2 flex-1">
+                <!-- top -->
+                <div class="flex gap-4">
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
+                    <p class="text-[#1313187f] font-medium">5.0</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">20</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">200</p>
+                  </div>
+                </div>
+                <!-- middle -->
+                <h3 class="text-our-black text-xl font-extrabold">
+                  World Cup Flags Football
+                </h3>
+                <p class="text-[#13131899] font-medium">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                </p>
+                <!-- bot -->
+                <div class="flex gap-5">
+                  <h4 class="font-extrabold text-our-primary text-lg">
+                    Price - $22.00
+                  </h4>
+                  <div class="flex items-center gap-2">
+                    <i
+                      class="fa-solid fa-cart-shopping text-xl text-[#1313187f]"
+                    ></i>
+                    <p class="text-[#1313187f] font-medium">
+                      Delivery Fee : Free
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Each Product -->
+          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+            <div
+              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
+            >
+              <!-- left -->
+              <div
+                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+              >
+                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+              </div>
+              <!-- right -->
+              <div class="space-y-2 flex-1">
+                <!-- top -->
+                <div class="flex gap-4">
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
+                    <p class="text-[#1313187f] font-medium">5.0</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">20</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">200</p>
+                  </div>
+                </div>
+                <!-- middle -->
+                <h3 class="text-our-black text-xl font-extrabold">
+                  World Cup Flags Football
+                </h3>
+                <p class="text-[#13131899] font-medium">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                </p>
+                <!-- bot -->
+                <div class="flex gap-5">
+                  <h4 class="font-extrabold text-our-primary text-lg">
+                    Price - $22.00
+                  </h4>
+                  <div class="flex items-center gap-2">
+                    <i
+                      class="fa-solid fa-cart-shopping text-xl text-[#1313187f]"
+                    ></i>
+                    <p class="text-[#1313187f] font-medium">
+                      Delivery Fee : Free
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Each Product -->
+          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+            <div
+              class="flex flex-col lg:flex-row gap-5 items-center justify-between"
+            >
+              <!-- left -->
+              <div
+                class="w-full lg:w-auto flex justify-center items-center lg:flex-.4 shrink-0"
+              >
+                <img class="w-full mx-auto" src="Images/5.png" alt="" />
+              </div>
+              <!-- right -->
+              <div class="space-y-2 flex-1">
+                <!-- top -->
+                <div class="flex gap-4">
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
+                    <p class="text-[#1313187f] font-medium">5.0</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">20</p>
+                  </div>
+
+                  <!-- each stat -->
+                  <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
+                    <p class="text-[#1313187f] font-medium">200</p>
+                  </div>
+                </div>
+                <!-- middle -->
+                <h3 class="text-our-black text-xl font-extrabold">
+                  World Cup Flags Football
+                </h3>
+                <p class="text-[#13131899] font-medium">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                </p>
+                <!-- bot -->
+                <div class="flex gap-5">
+                  <h4 class="font-extrabold text-our-primary text-lg">
+                    Price - $22.00
+                  </h4>
+                  <div class="flex items-center gap-2">
+                    <i
+                      class="fa-solid fa-cart-shopping text-xl text-[#1313187f]"
+                    ></i>
+                    <p class="text-[#1313187f] font-medium">
+                      Delivery Fee : Free
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- Product Gallery End -->
       </section>
