--- a/index.html
+++ b/index.html
@@ -152,6 +152,96 @@
       </section>
       <!-- Professional Hockey Clubs Stats End -->
 
+      <!-- Program Section Start -->
+      <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+        <!-- Section Title Start-->
+        <div
+          class="text-center px-1 py-6 lg:py-8 mt-10 lg:mt-24 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
+        >
+          <h1 class="text-our-black text-2xl lg:text-4xl font-extrabold mb-6">
+            Program Sections
+          </h1>
+          <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Section Title End-->
+
+        <!-- program gallery start -->
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+          <!-- item - 01  -->
+          <div class="relative">
+            <figure>
+              <img src="Images/2.png" alt="" class="min-h-60 h-full" />
+            </figure>
+            <div class="text-white absolute space-y-3 lg:space-y-6 p-3">
+              <h3 class="font-extrabold text-xl lg:text-2xl">Junior Program</h3>
+              <p class="font-medium max-w-[470px]">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <div class="">
+                <button
+                  class="rounded-lg bg-our-primary py-3 px-5 border-0 font-bold hover:bg-white hover:text-our-primary transition-all duration-300"
+                >
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <!-- item - 02  -->
+
+          <!-- <div class="relative">
+            <figure>
+              <img src="Images/3.png" alt="" class="" />
+            </figure>
+            <div class="text-white absolute bottom-10 left-10 space-y-6">
+              <h3 class="font-extrabold text-2xl">Teenager Program</h3>
+              <p class="font-medium max-w-[470px]">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <div class="">
+                <button
+                  class="rounded-lg bg-our-primary py-3 px-5 border-0 font-bold hover:bg-white hover:text-our-primary transition-all duration-300"
+                >
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div> -->
+
+          <!-- item - 03  -->.
+
+          <!-- <div class="relative col-span-1 lg:col-span-2">
+            <figure>
+              <img src="Images/4.png" alt="" class="" />
+            </figure>
+            <div class="text-white absolute bottom-10 left-10 space-y-6">
+              <h3 class="font-extrabold text-2xl">Teenager Program</h3>
+              <p class="font-medium max-w-[470px]">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <div class="">
+                <button
+                  class="rounded-lg bg-our-primary py-3 px-5 border-0 font-bold hover:bg-white hover:text-our-primary transition-all duration-300"
+                >
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div> -->
+        </div>
+        <!-- program gallery end -->
+      </section>
+      <!-- Program Section End -->
+
       <!-- New Products Section Start -->
       <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
         <!-- Section Title Start-->
@@ -167,6 +257,7 @@
           </p>
         </div>
         <!-- Section Title End-->
+
         <!-- Product Gallery Start -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
           <!-- Each Product -->
