working on banner now

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
     </script>
   </head>
   <body class="font-manrope">
-    <header></header>
+    <header>
+      <!-- banner section start -->
+      <div class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+        <div
+          class="bg-[url(Images/1.png)] min-h-screen bg-no-repeat bg-center"
+        ></div>
+      </div>
+      <!-- banner section end -->
+    </header>
     <main>
       <!-- Professional Hockey Clubs Stats Start -->
       <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
@@ -68,11 +76,12 @@
           <div class="flex flex-col items-center text-center px-4">
             <div class="">
               <div
-                class="radial-progress text-our-primary"
+                class="radial-progress text-our-primary rotate-180"
                 style="--value: 87; --size: 9rem"
                 role="progressbar"
               >
-                <span class="text-our-black font-extrabold text-3xl m-4"
+                <span
+                  class="text-our-black font-extrabold text-3xl m-4 -rotate-180"
                   >87%</span
                 >
               </div>
@@ -89,11 +98,12 @@
           <div class="flex flex-col items-center text-center px-4">
             <div class="">
               <div
-                class="radial-progress text-[#49D293]"
+                class="radial-progress text-[#49D293] rotate-[110deg]"
                 style="--value: 95; --size: 9rem"
                 role="progressbar"
               >
-                <span class="text-our-black font-extrabold text-3xl m-4"
+                <span
+                  class="text-our-black font-extrabold text-3xl m-4 -rotate-[110deg]"
                   >95%</span
                 >
               </div>
@@ -110,11 +120,12 @@
           <div class="flex flex-col items-center text-center px-4">
             <div class="">
               <div
-                class="radial-progress text-[#FFB546]"
+                class="radial-progress text-[#FFB546] rotate-[150deg]"
                 style="--value: 90; --size: 9rem"
                 role="progressbar"
               >
-                <span class="text-our-black font-extrabold text-3xl m-4"
+                <span
+                  class="text-our-black font-extrabold text-3xl m-4 -rotate-[150deg]"
                   >90%</span
                 >
               </div>
@@ -131,11 +142,12 @@
           <div class="flex flex-col items-center text-center px-4">
             <div class="">
               <div
-                class="radial-progress text-[#4C8DF1]"
+                class="radial-progress text-[#4C8DF1] rotate-[170deg]"
                 style="--value: 80; --size: 9rem"
                 role="progressbar"
               >
-                <span class="text-our-black font-extrabold text-3xl m-4"
+                <span
+                  class="text-our-black font-extrabold text-3xl m-4 -rotate-[170deg]"
                   >80%</span
                 >
               </div>
@@ -153,7 +165,7 @@
       <!-- Professional Hockey Clubs Stats End -->
 
       <!-- Program Section Start -->
-      <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+      <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[95%]">
         <!-- Section Title Start-->
         <div
           class="text-center px-1 py-6 lg:py-8 mt-10 lg:mt-24 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
@@ -173,9 +185,11 @@
           <!-- item - 01  -->
           <div class="relative">
             <figure>
-              <img src="Images/2.png" alt="" class="min-h-60 h-full" />
+              <img src="Images/2.png" alt="" class="min-h-60 h-full w-full" />
             </figure>
-            <div class="text-white absolute space-y-3 lg:space-y-6 p-3">
+            <div
+              class="absolute text-white space-y-3 lg:space-y-6 pb-6 lg:pb-8 pl-6 lg:pl-10 bottom-0 left-0"
+            >
               <h3 class="font-extrabold text-xl lg:text-2xl">Junior Program</h3>
               <p class="font-medium max-w-[470px]">
                 Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
@@ -194,12 +208,16 @@
 
           <!-- item - 02  -->
 
-          <!-- <div class="relative">
+          <div class="relative">
             <figure>
-              <img src="Images/3.png" alt="" class="" />
+              <img src="Images/3.png" alt="" class="min-h-60 h-full w-full" />
             </figure>
-            <div class="text-white absolute bottom-10 left-10 space-y-6">
-              <h3 class="font-extrabold text-2xl">Teenager Program</h3>
+            <div
+              class="absolute text-white space-y-3 lg:space-y-6 pb-6 lg:pb-8 pl-6 lg:pl-10 bottom-0 left-0"
+            >
+              <h3 class="font-extrabold text-xl lg:text-2xl">
+                Teenager Program
+              </h3>
               <p class="font-medium max-w-[470px]">
                 Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
                 elit enim sagittis turpis in magna. Id et sed euismod natoque
@@ -213,16 +231,22 @@
                 </button>
               </div>
             </div>
-          </div> -->
-
-          <!-- item - 03  -->.
-
-          <!-- <div class="relative col-span-1 lg:col-span-2">
-            <figure>
-              <img src="Images/4.png" alt="" class="" />
+          </div>
+          <!-- item - 03  -->
+          <div class="relative lg:col-span-2 rounded-xl">
+            <figure class="">
+              <img
+                src="Images/4.png"
+                alt=""
+                class="min-h-60 h-full w-full rounded-xl"
+              />
             </figure>
-            <div class="text-white absolute bottom-10 left-10 space-y-6">
-              <h3 class="font-extrabold text-2xl">Teenager Program</h3>
+            <div
+              class="absolute text-white space-y-3 lg:space-y-6 pb-6 lg:pb-8 pl-6 lg:pl-10 bottom-0 left-0"
+            >
+              <h3 class="font-extrabold text-xl lg:text-2xl">
+                Professional Program
+              </h3>
               <p class="font-medium max-w-[470px]">
                 Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
                 elit enim sagittis turpis in magna. Id et sed euismod natoque
@@ -236,7 +260,7 @@
                 </button>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
         <!-- program gallery end -->
       </section>
