--- a/index.html
+++ b/index.html
@@ -45,10 +45,40 @@
   <body class="font-manrope">
     <header>
       <!-- banner section start -->
-      <div class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+      <div class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%] mt-14 relative">
+        <div class="carousel w-full rounded-xl">
+          <!-- Slide-1 -->
+          <div id="slide1" class="carousel-item relative w-full">
+            <img src="Images/1.png" class="w-full min-h-60 object-cover" />
+            <!-- buttons -->
+            <div
+              class="absolute flex gap-3 bottom-5 left-1/2 transform -translate-x-1/2 lg:gap-4 lg:bottom-8 lg:left-8 lg:-translate-x-0"
+            >
+              <a
+                href="#slide4"
+                class="btn btn-circle bg-black border-black text-white text-2xl"
+                >❮</a
+              >
+              <a
+                href="#slide2"
+                class="btn btn-circle bg-black border-black text-white text-2xl"
+                >❯</a
+              >
+            </div>
+          </div>
+        </div>
+        <!-- black badge -->
         <div
-          class="bg-[url(Images/1.png)] min-h-screen bg-no-repeat bg-center"
-        ></div>
+          class="mt-4 p-4 bg-black text-white rounded-xl space-y-2 lg:p-8 lg:max-w-xl lg:absolute lg:bottom-8 lg:right-8 lg:transform lg:-translate-y-2"
+        >
+          <h3 class="text-lg font-extrabold lg:text-2xl">
+            Meet all the heroes from the field
+          </h3>
+          <p class="opacity-40 font-medium text-sm lg:text-base">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
       </div>
       <!-- banner section end -->
     </header>
