faq section fully done

--- a/index.html
+++ b/index.html
@@ -66,6 +66,63 @@
               >
             </div>
           </div>
+          <!-- Slide-2 -->
+          <div id="slide2" class="carousel-item relative w-full">
+            <img src="Images/1.png" class="w-full min-h-60 object-cover" />
+            <!-- buttons -->
+            <div
+              class="absolute flex gap-3 bottom-5 left-1/2 transform -translate-x-1/2 lg:gap-4 lg:bottom-8 lg:left-8 lg:-translate-x-0"
+            >
+              <a
+                href="#slide1"
+                class="btn btn-circle bg-black border-black text-white text-2xl"
+                >❮</a
+              >
+              <a
+                href="#slide3"
+                class="btn btn-circle bg-black border-black text-white text-2xl"
+                >❯</a
+              >
+            </div>
+          </div>
+          <!-- Slide-3 -->
+          <div id="slide3" class="carousel-item relative w-full">
+            <img src="Images/1.png" class="w-full min-h-60 object-cover" />
+            <!-- buttons -->
+            <div
+              class="absolute flex gap-3 bottom-5 left-1/2 transform -translate-x-1/2 lg:gap-4 lg:bottom-8 lg:left-8 lg:-translate-x-0"
+            >
+              <a
+                href="#slide2"
+                class="btn btn-circle bg-black border-black text-white text-2xl"
+                >❮</a
+              >
+              <a
+                href="#slide4"
+                class="btn btn-circle bg-black border-black text-white text-2xl"
+                >❯</a
+              >
+            </div>
+          </div>
+          <!-- Slide-4 -->
+          <div id="slide4" class="carousel-item relative w-full">
+            <img src="Images/1.png" class="w-full min-h-60 object-cover" />
+            <!-- buttons -->
+            <div
+              class="absolute flex gap-3 bottom-5 left-1/2 transform -translate-x-1/2 lg:gap-4 lg:bottom-8 lg:left-8 lg:-translate-x-0"
+            >
+              <a
+                href="#slide3"
+                class="btn btn-circle bg-black border-black text-white text-2xl"
+                >❮</a
+              >
+              <a
+                href="#slide1"
+                class="btn btn-circle bg-black border-black text-white text-2xl"
+                >❯</a
+              >
+            </div>
+          </div>
         </div>
         <!-- black badge -->
         <div
@@ -660,6 +717,163 @@
         <!-- Product Gallery End -->
       </section>
       <!-- New Products Section End -->
+
+      <!-- Clients FAQ Section Start -->
+      <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+        <!-- Section Title Start-->
+        <div
+          class="text-center px-1 py-6 lg:py-8 mt-10 lg:mt-24 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
+        >
+          <h1 class="text-our-black text-2xl lg:text-4xl font-extrabold mb-6">
+            Clients Question
+          </h1>
+          <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Section Title End-->
+
+        <!-- FAQ container start -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 border border-[#13131819] py-6 px-7 rounded-2xl gap-6 lg:gap-10 items-center"
+        >
+          <!-- left -->
+          <div>
+            <img
+              class="w-full md:h-full md:max-h-[470px] md:object-cover rounded-2xl hidden md:block"
+              src="Images/11.png"
+              alt=""
+            />
+            <img
+              class="w-full md:h-full md:max-h-[470px] md:object-cover rounded-2xl md:hidden"
+              src="Images/Rectangle14.png"
+              alt=""
+            />
+          </div>
+          <!-- right -->
+          <div>
+            <!-- accordion start -->
+            <!-- faq item 1 -->
+            <div
+              class="collapse collapse-plus rounded-none border-b border-[#13131819]"
+            >
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div
+                class="collapse-title text-our-black text-xl font-bold p-0 flex items-center after:text-4xl after:font-normal"
+              >
+                Our Equipment
+              </div>
+              <div class="collapse-content p-0 lg:mb-2">
+                <p
+                  class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
+                >
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+
+            <!-- faq item 2-->
+            <div
+              class="collapse collapse-plus rounded-none border-b border-[#13131819]"
+            >
+              <input type="radio" name="my-accordion-3" />
+              <div
+                class="collapse-title text-our-black text-xl font-bold p-0 flex items-center after:text-4xl after:font-normal"
+              >
+                Hockey Training
+              </div>
+              <div class="collapse-content p-0 lg:mb-2">
+                <p
+                  class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
+                >
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+
+            <!-- faq item 3-->
+            <div
+              class="collapse collapse-plus rounded-none border-b border-[#13131819]"
+            >
+              <input type="radio" name="my-accordion-3" />
+              <div
+                class="collapse-title text-our-black text-xl font-bold p-0 flex items-center after:text-4xl after:font-normal"
+              >
+                Private Lessons
+              </div>
+              <div class="collapse-content p-0 lg:mb-2">
+                <p
+                  class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
+                >
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <!-- faq item 4-->
+            <div
+              class="collapse collapse-plus rounded-none border-b border-[#13131819]"
+            >
+              <input type="radio" name="my-accordion-3" />
+              <div
+                class="collapse-title text-our-black text-xl font-bold p-0 flex items-center after:text-4xl after:font-normal"
+              >
+                Ski Touring
+              </div>
+              <div class="collapse-content p-0 lg:mb-2">
+                <p
+                  class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
+                >
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <!-- faq item 5-->
+            <div
+              class="collapse collapse-plus rounded-none border-b border-[#13131819]"
+            >
+              <input type="radio" name="my-accordion-3" />
+              <div
+                class="collapse-title text-our-black text-xl font-bold p-0 flex items-center after:text-4xl after:font-normal"
+              >
+                Booking
+              </div>
+              <div class="collapse-content p-0 lg:mb-2">
+                <p
+                  class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
+                >
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <!-- faq item 6-->
+            <div class="collapse collapse-plus rounded-none">
+              <input type="radio" name="my-accordion-3" />
+              <div
+                class="collapse-title text-our-black text-xl font-bold p-0 flex items-center after:text-4xl after:font-normal"
+              >
+                Pricings
+              </div>
+              <div class="collapse-content p-0 lg:mb-2">
+                <p
+                  class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
+                >
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna.
+                </p>
+              </div>
+            </div>
+            <!-- accordion end -->
+          </div>
+        </div>
+        <!-- FAQ container end -->
+      </section>
+      <!-- Clients FAQ Section End -->
     </main>
 
     <footer></footer>
