get in touch section mobile version done

--- a/index.html
+++ b/index.html
@@ -874,6 +874,161 @@
         <!-- FAQ container end -->
       </section>
       <!-- Clients FAQ Section End -->
+
+      <!-- Get in Touch Section Start -->
+      <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[90%]">
+        <!-- Section Title Start-->
+        <div
+          class="text-center px-1 py-6 lg:py-8 mt-10 lg:mt-24 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
+        >
+          <h1 class="text-our-black text-2xl lg:text-4xl font-extrabold mb-6">
+            Get In Touch
+          </h1>
+          <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Section Title End-->
+
+        <!-- Contact Cards Container -->
+        <div class="p-6 lg:p-12 border rounded-2xl border-[#13131819]">
+          <!-- card 1 -->
+          <div class="bg-[#F8FDF0] rounded-2xl p-6 lg:p-8 space-y-6">
+            <div>
+              <img src="Images/Group 1171275317.png" alt="" />
+            </div>
+            <div>
+              <p class="text-[#9D9F9A]">Phone Number :</p>
+              <h4 class="text-our-black text-lg font-extrabold">
+                (+62) 123-321-543
+              </h4>
+            </div>
+          </div>
+
+          <!-- card 2 -->
+          <div class="bg-[#FFFCEF] rounded-2xl p-6 lg:p-8 space-y-6">
+            <div>
+              <img src="Images/Group 1171275318.png" alt="" />
+            </div>
+            <div>
+              <p class="text-[#9D9F9A]">Email :</p>
+              <h4 class="text-our-black text-lg font-extrabold">
+                hockeys@support.com
+              </h4>
+            </div>
+          </div>
+
+          <!-- card 3 -->
+          <div class="bg-[#EFF5FE] rounded-2xl p-6 lg:p-8 space-y-6">
+            <div>
+              <img src="Images/Group 1171275321.png" alt="" />
+            </div>
+            <div>
+              <p class="text-[#9D9F9A]">Location :</p>
+              <h4 class="text-our-black text-lg font-extrabold">
+                152/1 Mohakhali Wireless Gate
+              </h4>
+            </div>
+          </div>
+        </div>
+
+        <!-- form container -->
+        <form class="space-y-2">
+          <label class="form-control w-full space-y-2">
+            <div class="label">
+              <span class="label-text text-our-black font-bold text-xl"
+                >Your Name</span
+              >
+            </div>
+            <input
+              type="text"
+              placeholder="Enter your full name"
+              class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
+            />
+          </label>
+
+          <label class="form-control w-full space-y-2">
+            <div class="label">
+              <span class="label-text text-our-black font-bold text-xl"
+                >Your Email</span
+              >
+            </div>
+            <input
+              type="email"
+              placeholder="Enter your email"
+              class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
+            />
+          </label>
+
+          <label class="form-control w-full space-y-2">
+            <div class="label">
+              <span class="label-text text-our-black font-bold text-xl"
+                >Subject</span
+              >
+            </div>
+            <input
+              type="text"
+              placeholder="Enter your subject"
+              class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
+            />
+          </label>
+
+          <label class="form-control w-full space-y-2">
+            <div class="label">
+              <span class="label-text text-our-black font-bold text-xl"
+                >Phone Number</span
+              >
+            </div>
+            <input
+              type="text"
+              placeholder="Enter your phone number"
+              class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
+            />
+          </label>
+
+          <label class="form-control w-full space-y-2">
+            <div class="label">
+              <span class="label-text text-our-black font-bold text-xl"
+                >Your bio</span
+              >
+            </div>
+            <textarea
+              class="w-full bg-[#F8F8F8] outline-none border-none focus:outline-none h-52 text-base p-5 rounded-lg"
+              placeholder="Bio"
+            ></textarea>
+          </label>
+
+          <div class="">
+            <button
+              class="text-white rounded-lg bg-our-primary py-3 px-5 border border-our-primary font-bold hover:bg-white hover:text-our-primary transition-all duration-300 w-full"
+            >
+              Send Message
+            </button>
+          </div>
+        </form>
+        <!-- Social Icons Start -->
+        <div class="p-7 text-center bg-[#F8F8F8] rounded-xl my-10 space-y-6">
+          <h3 class="text-our-black text-2xl font-extrabold">Social Media</h3>
+
+          <ul class="flex gap-8 justify-center text-2xl">
+            <li>
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-github"></i></a>
+            </li>
+          </ul>
+        </div>
+        <!-- Social Icons End -->
+      </section>
+      <!-- Get in Touch Section End -->
     </main>
 
     <footer></footer>
