added hover effects on social icons

--- a/index.html
+++ b/index.html
@@ -1013,16 +1013,32 @@
 
           <ul class="flex gap-8 justify-center text-2xl">
             <li>
-              <a href=""><i class="fa-brands fa-twitter"></i></a>
+              <a class="" href=""
+                ><i
+                  class="fa-brands fa-twitter transition-all duration-300 hover:scale-150 hover:text-our-primary"
+                ></i
+              ></a>
             </li>
             <li>
-              <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+              <a class="" href=""
+                ><i
+                  class="fa-brands fa-facebook-f transition-all duration-300 hover:scale-150 hover:text-our-primary"
+                ></i
+              ></a>
             </li>
             <li>
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
+              <a class="" href=""
+                ><i
+                  class="fa-brands fa-instagram transition-all duration-300 hover:scale-150 hover:text-our-primary"
+                ></i
+              ></a>
             </li>
             <li>
-              <a href=""><i class="fa-brands fa-github"></i></a>
+              <a class="" href=""
+                ><i
+                  class="fa-brands fa-github transition-all duration-300 hover:scale-150 hover:text-our-primary"
+                ></i
+              ></a>
             </li>
           </ul>
         </div>
