--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <!-- black badge -->
         <div
-          class="mt-4 p-4 bg-black text-white rounded-xl space-y-2 lg:p-8 lg:max-w-xl lg:absolute lg:bottom-8 lg:right-8 lg:transform lg:-translate-y-2"
+          class="mt-4 p-4 bg-black text-white rounded-xl lg:p-8 lg:max-w-xl lg:absolute lg:bottom-8 lg:right-8 lg:transform lg:-translate-y-2"
         >
           <h3 class="text-lg font-extrabold lg:text-2xl">
             Meet all the heroes from the field
@@ -891,122 +891,134 @@
         </div>
         <!-- Section Title End-->
 
-        <!-- Contact Cards Container -->
-        <div class="p-6 lg:p-12 border rounded-2xl border-[#13131819]">
-          <!-- card 1 -->
-          <div class="bg-[#F8FDF0] rounded-2xl p-6 lg:p-8 space-y-6">
-            <div>
-              <img src="Images/Group 1171275317.png" alt="" />
+        <!-- main container -->
+        <div class="grid lg:grid-cols-7 gap-6">
+          <!-- Contact Cards Container -->
+          <div
+            class="p-6 lg:col-span-3 lg:p-12 border rounded-2xl border-[#13131819] grid grid-cols-1 gap-6"
+          >
+            <!-- card 1 -->
+            <div class="bg-[#F8FDF0] rounded-2xl p-6 lg:p-8 space-y-6">
+              <div>
+                <img src="Images/Group 1171275317.png" alt="" />
+              </div>
+              <div>
+                <p class="text-[#9D9F9A]">Phone Number :</p>
+                <h4 class="text-our-black text-lg font-extrabold">
+                  (+62) 123-321-543
+                </h4>
+              </div>
             </div>
-            <div>
-              <p class="text-[#9D9F9A]">Phone Number :</p>
-              <h4 class="text-our-black text-lg font-extrabold">
-                (+62) 123-321-543
-              </h4>
+
+            <!-- card 2 -->
+            <div class="bg-[#FFFCEF] rounded-2xl p-6 lg:p-8 space-y-6">
+              <div>
+                <img src="Images/Group 1171275318.png" alt="" />
+              </div>
+              <div>
+                <p class="text-[#9D9F9A]">Email :</p>
+                <h4 class="text-our-black text-lg font-extrabold">
+                  hockeys@support.com
+                </h4>
+              </div>
+            </div>
+
+            <!-- card 3 -->
+            <div class="bg-[#EFF5FE] rounded-2xl p-6 lg:p-8 space-y-6">
+              <div>
+                <img src="Images/Group 1171275321.png" alt="" />
+              </div>
+              <div>
+                <p class="text-[#9D9F9A]">Location :</p>
+                <h4 class="text-our-black text-lg font-extrabold">
+                  152/1 Mohakhali Wireless Gate
+                </h4>
+              </div>
             </div>
           </div>
 
-          <!-- card 2 -->
-          <div class="bg-[#FFFCEF] rounded-2xl p-6 lg:p-8 space-y-6">
-            <div>
-              <img src="Images/Group 1171275318.png" alt="" />
-            </div>
-            <div>
-              <p class="text-[#9D9F9A]">Email :</p>
-              <h4 class="text-our-black text-lg font-extrabold">
-                hockeys@support.com
-              </h4>
-            </div>
-          </div>
+          <!-- form container -->
 
-          <!-- card 3 -->
-          <div class="bg-[#EFF5FE] rounded-2xl p-6 lg:p-8 space-y-6">
-            <div>
-              <img src="Images/Group 1171275321.png" alt="" />
+          <!-- using flex -->
+          <form class="lg:col-span-4 flex flex-col gap-4 lg:gap-6">
+            <div class="flex gap-4 lg:gap-6 flex-col lg:flex-row">
+              <!-- 1 -->
+              <label class="form-control w-full space-y-2">
+                <div class="label">
+                  <span class="label-text text-our-black font-bold text-xl"
+                    >Your Name</span
+                  >
+                </div>
+                <input
+                  type="text"
+                  placeholder="Enter your full name"
+                  class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
+                />
+              </label>
+              <!-- 2 -->
+              <label class="form-control w-full space-y-2">
+                <div class="label">
+                  <span class="label-text text-our-black font-bold text-xl"
+                    >Your Email</span
+                  >
+                </div>
+                <input
+                  type="email"
+                  placeholder="Enter your email"
+                  class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
+                />
+              </label>
             </div>
-            <div>
-              <p class="text-[#9D9F9A]">Location :</p>
-              <h4 class="text-our-black text-lg font-extrabold">
-                152/1 Mohakhali Wireless Gate
-              </h4>
+            <div class="flex gap-4 lg:gap-6 flex-col lg:flex-row">
+              <!-- 3 -->
+              <label class="form-control w-full space-y-2">
+                <div class="label">
+                  <span class="label-text text-our-black font-bold text-xl"
+                    >Subject</span
+                  >
+                </div>
+                <input
+                  type="text"
+                  placeholder="Enter your subject"
+                  class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
+                />
+              </label>
+              <!-- 4 -->
+              <label class="form-control w-full space-y-2">
+                <div class="label">
+                  <span class="label-text text-our-black font-bold text-xl"
+                    >Phone Number</span
+                  >
+                </div>
+                <input
+                  type="text"
+                  placeholder="Enter your phone number"
+                  class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
+                />
+              </label>
             </div>
-          </div>
+            <!-- 5 -->
+            <label class="form-control w-full space-y-2">
+              <div class="label">
+                <span class="label-text text-our-black font-bold text-xl"
+                  >Message</span
+                >
+              </div>
+              <textarea
+                class="w-full bg-[#F8F8F8] outline-none border-none focus:outline-none h-52 lg:h-96 text-base p-5 rounded-lg"
+                placeholder="Write your message"
+              ></textarea>
+            </label>
+
+            <div class="mt-4">
+              <button
+                class="text-white rounded-lg bg-our-primary py-3 px-5 border border-our-primary font-bold hover:bg-white hover:text-our-primary transition-all duration-300 w-full"
+              >
+                Send Message
+              </button>
+            </div>
+          </form>
         </div>
-
-        <!-- form container -->
-        <form class="space-y-2">
-          <label class="form-control w-full space-y-2">
-            <div class="label">
-              <span class="label-text text-our-black font-bold text-xl"
-                >Your Name</span
-              >
-            </div>
-            <input
-              type="text"
-              placeholder="Enter your full name"
-              class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
-            />
-          </label>
-
-          <label class="form-control w-full space-y-2">
-            <div class="label">
-              <span class="label-text text-our-black font-bold text-xl"
-                >Your Email</span
-              >
-            </div>
-            <input
-              type="email"
-              placeholder="Enter your email"
-              class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
-            />
-          </label>
-
-          <label class="form-control w-full space-y-2">
-            <div class="label">
-              <span class="label-text text-our-black font-bold text-xl"
-                >Subject</span
-              >
-            </div>
-            <input
-              type="text"
-              placeholder="Enter your subject"
-              class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
-            />
-          </label>
-
-          <label class="form-control w-full space-y-2">
-            <div class="label">
-              <span class="label-text text-our-black font-bold text-xl"
-                >Phone Number</span
-              >
-            </div>
-            <input
-              type="text"
-              placeholder="Enter your phone number"
-              class="input w-full bg-[#F8F8F8] outline-none border-none focus:outline-none"
-            />
-          </label>
-
-          <label class="form-control w-full space-y-2">
-            <div class="label">
-              <span class="label-text text-our-black font-bold text-xl"
-                >Your bio</span
-              >
-            </div>
-            <textarea
-              class="w-full bg-[#F8F8F8] outline-none border-none focus:outline-none h-52 text-base p-5 rounded-lg"
-              placeholder="Bio"
-            ></textarea>
-          </label>
-
-          <div class="">
-            <button
-              class="text-white rounded-lg bg-our-primary py-3 px-5 border border-our-primary font-bold hover:bg-white hover:text-our-primary transition-all duration-300 w-full"
-            >
-              Send Message
-            </button>
-          </div>
-        </form>
         <!-- Social Icons Start -->
         <div class="p-7 text-center bg-[#F8F8F8] rounded-xl my-10 space-y-6">
           <h3 class="text-our-black text-2xl font-extrabold">Social Media</h3>
