working on footer

--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,77 @@
       <!-- Get in Touch Section End -->
     </main>
 
-    <footer></footer>
+    <footer class="bg-black">
+      <div
+        class="p-10 text-[#A1A1A3] max-w-[1170px] mx-auto lg:w-[82%] w-[90%]"
+      >
+        <nav>
+          <header class="text-white text-lg font-bold mb-7">Company</header>
+          <ul class="space-y-4">
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >About us</a
+              >
+            </li>
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >Leadership</a
+              >
+            </li>
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >Careers</a
+              >
+            </li>
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >News & Article</a
+              >
+            </li>
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >Legal Notice</a
+              >
+            </li>
+          </ul>
+        </nav>
+
+        <nav>
+          <header class="text-white text-lg font-bold mb-7">Support</header>
+          <ul class="space-y-4">
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >Help Center</a
+              >
+            </li>
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >FAQ</a
+              >
+            </li>
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >Ticket Support</a
+              >
+            </li>
+            <li>
+              <a
+                class="cursor-pointer transition-all duration-300 hover:text-our-primary"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
 
     <!-- <div class="radial-progress text-primary" style="--value:70;" role="progressbar">70%</div> -->
   </body>
