added overlay on program cards

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
       <!-- Program Section Start -->
       <section class="max-w-[1170px] mx-auto lg:w-[82%] w-[95%]">
         <!-- Section Title Start-->
+
         <div
           class="text-center px-1 py-6 lg:py-8 mt-10 lg:mt-24 mb-6 lg:mb-12 border-y border-dashed border-[#13131899]"
         >
@@ -327,7 +328,7 @@
         <!-- program gallery start -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
           <!-- item - 01  -->
-          <div class="relative">
+          <div class="relative i-1">
             <figure>
               <img src="Images/2.png" alt="" class="min-h-60 h-full w-full" />
             </figure>
@@ -352,7 +353,7 @@
 
           <!-- item - 02  -->
 
-          <div class="relative">
+          <div class="relative i-1">
             <figure>
               <img src="Images/3.png" alt="" class="min-h-60 h-full w-full" />
             </figure>
@@ -377,7 +378,7 @@
             </div>
           </div>
           <!-- item - 03  -->
-          <div class="relative lg:col-span-2 rounded-xl">
+          <div class="relative lg:col-span-2 rounded-xl i-1">
             <figure class="">
               <img
                 src="Images/4.png"
